--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
+        <!-- <meta
             name="description"
             content="无限道具版羊了个羊、可以通关的羊了个羊"
-        />
-        <title>洋了个洋</title>
+        /> -->
+        <title>烊了个烊</title>
         <script>
             var _hmt = _hmt || [];
             (function () {
@@ -33,3 +33,4 @@
         ></script>
     </body>
 </html>
+
